--- a/ml_course_ru/assignments/Lab01.ipynb
+++ b/ml_course_ru/assignments/Lab01.ipynb
@@ -749,7 +749,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You code here"
+    " print (len(data[(data['Sex'] == 'male')]))
+print (len(data[(data['Sex'] == 'female')]))"
    ]
   },
   {
@@ -769,7 +770,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You code here"
+    "print (len(data[(data['Sex'] == 'male') & (data['Pclass'] == 2) ]))
+print (len(data[(data['Sex'] == 'female')& (data['Pclass'] == 2)]))"
    ]
   },
   {
@@ -789,7 +791,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You code here"
+    "df = pd.DataFrame(data)
+print(round(df['Fare'].std(), 2))
+print(round(df['Fare'].median(), 2))"
    ]
   },
   {
@@ -807,7 +811,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You code here"
+    "if data[data['Survived'] == 1]['Age'].mean() > data[data['Survived'] == 0]['Age'].mean():
+    print ('Да')
+else:
+    print("Нет")"
    ]
   },
   {
@@ -827,7 +834,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You code here"
+    "print ( len(data[(data['Survived'] == 1) & (data.Age < 30)])/ len(data[data['Age'] < 30]) * 100)
+print ( len(data[(data['Survived'] == 1) & (data.Age > 60)])/ len(data[data['Age'] > 60]) * 100)"
    ]
   },
   {
@@ -847,7 +855,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You code here"
+    "print ( len(data[(data['Survived'] == 1) & (data.Sex == 'male')])/ len(data[data['Sex'] == 'male']) * 100)
+print ( len(data[(data['Survived'] == 1) & (data.Sex == 'female')])/ len(data[data['Sex'] == 'female']) * 100)"
    ]
   },
   {
@@ -867,7 +876,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You code here"
+    "print(data[data['Sex'] == 'male']['Name'].str.extract(', \w+. (.+?) ')[0].value_counts().head(4))"
    ]
   },
   {
@@ -887,7 +896,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You code here"
+    "if data[(data['Pclass'] == 1) & (data['Sex'] == 'male')]['Age'].mean() <40:
+    print('Ложь')
+else:
+    print('Правда')
+
+if data[(data['Pclass'] == 1) & (data['Sex'] == 'female')]['Age'].mean() <40:
+    print('Ложь')
+else:
+    print('Правда')
+
+if data[(data['Pclass'] == 1) & (data['Sex'] == 'male')]['Age'].mean() > data[(data['Pclass'] == 1) & (data['Sex'] == 'female')]['Age'].mean() :
+    if data[(data['Pclass'] == 2) & (data['Sex'] == 'male')]['Age'].mean() > data[(data['Pclass'] == 2) & (data['Sex'] == 'female')]['Age'].mean() :
+        if data[(data['Pclass'] == 3) & (data['Sex'] == 'male')]['Age'].mean() > data[(data['Pclass'] == 3) & (data['Sex'] == 'female')]['Age'].mean() :
+            print ('Правда')
+        else:
+            print('Ложь')
+    else:
+        print('Ложь')
+else:
+    print('Ложь')
+
+if data[(data['Pclass'] == 1)]['Age'].mean() > data[(data['Pclass'] == 2)]['Age'].mean() > data[(data['Pclass'] == 3)]['Age'].mean():
+    print ('Правда')
+else:
+    print('Ложь')
+"
    ]
   },
   {
