--- a/ml_course_ru/assignments/Lab01.ipynb
+++ b/ml_course_ru/assignments/Lab01.ipynb
@@ -749,8 +749,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " print (len(data[(data['Sex'] == 'male')]))
-print (len(data[(data['Sex'] == 'female')]))"
+    " #print (len(data[(data['Sex'] == 'male')]))
+      #print (len(data[(data['Sex'] == 'female')]))"
    ]
   },
   {
@@ -770,8 +770,8 @@ print (len(data[(data['Sex'] == 'female')]))"
    "metadata": {},
    "outputs": [],
    "source": [
-    "print (len(data[(data['Sex'] == 'male') & (data['Pclass'] == 2) ]))
-print (len(data[(data['Sex'] == 'female')& (data['Pclass'] == 2)]))"
+    "#print (len(data[(data['Sex'] == 'male') & (data['Pclass'] == 2) ]))
+     #print (len(data[(data['Sex'] == 'female')& (data['Pclass'] == 2)]))"
    ]
   },
   {
@@ -791,9 +791,9 @@ print (len(data[(data['Sex'] == 'female')& (data['Pclass'] == 2)]))"
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(data)
-print(round(df['Fare'].std(), 2))
-print(round(df['Fare'].median(), 2))"
+    "#df = pd.DataFrame(data)
+    #print(round(df['Fare'].std(), 2))
+    #print(round(df['Fare'].median(), 2))"
    ]
   },
   {
@@ -811,10 +811,10 @@ print(round(df['Fare'].median(), 2))"
    "metadata": {},
    "outputs": [],
    "source": [
-    "if data[data['Survived'] == 1]['Age'].mean() > data[data['Survived'] == 0]['Age'].mean():
-    print ('Да')
-else:
-    print("Нет")"
+    "#if data[data['Survived'] == 1]['Age'].mean() > data[data['Survived'] == 0]['Age'].mean():
+    #print ('Да')
+#else:
+    #print("Нет")"
    ]
   },
   {
@@ -834,8 +834,8 @@ else:
    "metadata": {},
    "outputs": [],
    "source": [
-    "print ( len(data[(data['Survived'] == 1) & (data.Age < 30)])/ len(data[data['Age'] < 30]) * 100)
-print ( len(data[(data['Survived'] == 1) & (data.Age > 60)])/ len(data[data['Age'] > 60]) * 100)"
+    "#print ( len(data[(data['Survived'] == 1) & (data.Age < 30)])/ len(data[data['Age'] < 30]) * 100)
+#print ( len(data[(data['Survived'] == 1) & (data.Age > 60)])/ len(data[data['Age'] > 60]) * 100)"
    ]
   },
   {
@@ -855,8 +855,8 @@ print ( len(data[(data['Survived'] == 1) & (data.Age > 60)])/ len(data[data['Age
    "metadata": {},
    "outputs": [],
    "source": [
-    "print ( len(data[(data['Survived'] == 1) & (data.Sex == 'male')])/ len(data[data['Sex'] == 'male']) * 100)
-print ( len(data[(data['Survived'] == 1) & (data.Sex == 'female')])/ len(data[data['Sex'] == 'female']) * 100)"
+    "#print ( len(data[(data['Survived'] == 1) & (data.Sex == 'male')])/ len(data[data['Sex'] == 'male']) * 100)
+#print ( len(data[(data['Survived'] == 1) & (data.Sex == 'female')])/ len(data[data['Sex'] == 'female']) * 100)"
    ]
   },
   {
@@ -876,7 +876,7 @@ print ( len(data[(data['Survived'] == 1) & (data.Sex == 'female')])/ len(data[da
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(data[data['Sex'] == 'male']['Name'].str.extract(', \w+. (.+?) ')[0].value_counts().head(4))"
+    "#print(data[data['Sex'] == 'male']['Name'].str.extract(', \w+. (.+?) ')[0].value_counts().head(4))"
    ]
   },
   {
@@ -896,31 +896,31 @@ print ( len(data[(data['Survived'] == 1) & (data.Sex == 'female')])/ len(data[da
    "metadata": {},
    "outputs": [],
    "source": [
-    "if data[(data['Pclass'] == 1) & (data['Sex'] == 'male')]['Age'].mean() <40:
+    "#if data[(data['Pclass'] == 1) & (data['Sex'] == 'male')]['Age'].mean() <40:
     print('Ложь')
-else:
+#else:
     print('Правда')
 
-if data[(data['Pclass'] == 1) & (data['Sex'] == 'female')]['Age'].mean() <40:
+#if data[(data['Pclass'] == 1) & (data['Sex'] == 'female')]['Age'].mean() <40:
     print('Ложь')
-else:
+#else:
     print('Правда')
 
-if data[(data['Pclass'] == 1) & (data['Sex'] == 'male')]['Age'].mean() > data[(data['Pclass'] == 1) & (data['Sex'] == 'female')]['Age'].mean() :
-    if data[(data['Pclass'] == 2) & (data['Sex'] == 'male')]['Age'].mean() > data[(data['Pclass'] == 2) & (data['Sex'] == 'female')]['Age'].mean() :
-        if data[(data['Pclass'] == 3) & (data['Sex'] == 'male')]['Age'].mean() > data[(data['Pclass'] == 3) & (data['Sex'] == 'female')]['Age'].mean() :
-            print ('Правда')
-        else:
-            print('Ложь')
-    else:
-        print('Ложь')
-else:
-    print('Ложь')
+#if data[(data['Pclass'] == 1) & (data['Sex'] == 'male')]['Age'].mean() > data[(data['Pclass'] == 1) & (data['Sex'] == 'female')]['Age'].mean() :
+    #if data[(data['Pclass'] == 2) & (data['Sex'] == 'male')]['Age'].mean() > data[(data['Pclass'] == 2) & (data['Sex'] == 'female')]['Age'].mean() :
+        #if data[(data['Pclass'] == 3) & (data['Sex'] == 'male')]['Age'].mean() > data[(data['Pclass'] == 3) & (data['Sex'] == 'female')]['Age'].mean() :
+            #print ('Правда')
+        #else:
+            #print('Ложь')
+    #else:
+        #print('Ложь')
+#else:
+    #print('Ложь')
 
-if data[(data['Pclass'] == 1)]['Age'].mean() > data[(data['Pclass'] == 2)]['Age'].mean() > data[(data['Pclass'] == 3)]['Age'].mean():
-    print ('Правда')
-else:
-    print('Ложь')
+#if data[(data['Pclass'] == 1)]['Age'].mean() > data[(data['Pclass'] == 2)]['Age'].mean() > data[(data['Pclass'] == 3)]['Age'].mean():
+    #print ('Правда')
+#else:
+    #print('Ложь')
 "
    ]
   },
